@@ -1,10 +1,10 @@
-INCLUDES = -I. -Iimagewin -Iconf -Ifiles -Iaudio -Ipathfinder -Iusecode\
+INCLUDES = -I. -Iimagewin -Iconf -Ifiles -Igumps -Iaudio -Ipathfinder -Iusecode\
 	$(SDL_INCLUDES) $(INCDIRS) $(WINDOWING_SYSTEM) \
 	$(DEBUG_FLAGS) $(CPPFLAGS) -DEXULT_DATADIR=\""$(datadir)/exult"\"
 
 CXXLINK = $(LIBTOOL) --mode=link $(CXXLD) $(AM_CXXFLAGS) $(DEBUG_FLAGS) $(CXXFLAGS) $(LDFLAGS) -o $(EXE_TARGET)
 
-SUBDIRS = audio pathfinder files conf flic tools data docs desktop imagewin usecode
+SUBDIRS = audio pathfinder files gumps conf flic tools data docs desktop imagewin usecode
 
 bin_PROGRAMS = exult
 
@@ -104,6 +104,7 @@ exult_LDADD = 			\
 	flic/libflic.la		\
 	conf/libconf.la		\
 	files/libu7file.la	\
+	gumps/libgumps.la	\
 	imagewin/libimagewin.la	\
 	usecode/libusecode.la	\
 	$(SDL_LIBS) $(KMID_LIBS) $(SYSLIBS) $(x_libraries) $(ICON_FILE)
